refactor: integrate security filters and restrict actuator endpoints